fixed overflow issue with module form

--- a/src/app/Contacts/AddContact/AddContact.module.scss
+++ b/src/app/Contacts/AddContact/AddContact.module.scss
@@ -1,4 +1,3 @@
 .addContactCard {
   //border: 3px solid rgb(255, 0, 0);
-  width: 600px;
 }
